make tox skip dredd_hooks.py

--- a/tox.ini
+++ b/tox.ini
@@ -19,8 +19,8 @@ deps =
     mock
 
 commands =
-    py.test -p no:cov -p no:unittest --flake8 {posargs}
-    py.test -p no:flake8 --cov-report term --cov-report html --cov=medusa {posargs}
+    py.test -p no:cov -p no:unittest --flake8 {posargs} -k 'not dredd_hook.py'
+    py.test -p no:flake8 --cov-report term --cov-report html --cov=medusa {posargs} -k 'not dredd_hook.py'
 
 [flake8]
 import-order-style = cryptography
